--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -665,6 +665,7 @@
 
 <div id="flashErrorBox" class="hidden mb-4 p-3 rounded text-white bg-red-500 shadow-md"></div>
 
+<%- include('partials/footer') %>
 
 
     <script>
