--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -137,9 +137,8 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-white border-t mt-12 py-6 text-center text-gray-500 text-sm">
-    © <%= new Date().getFullYear() %> GameZone. All rights reserved.
-  </footer>
+  <%- include('partials/footer') %>
+
 
  
   <script src="/js/homeSearch.js"></script>
