--- a/views/user/orderDetails.ejs
+++ b/views/user/orderDetails.ejs
@@ -206,6 +206,7 @@
       
     </main>
   </div>
+  <%- include("partials/footer") %>
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <script>
 async function retryPayment(orderId){
