--- a/views/user/password-change.ejs
+++ b/views/user/password-change.ejs
@@ -92,6 +92,7 @@
             </div>
         </main>
     </div>
+    <%- include("partials/footer") %>
     <script>
         function togglePassword(fieldId, btn) {
             const input = document.getElementById(fieldId);
