--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -239,6 +239,8 @@
     <span id="edit-success-text" class="ml-2"></span>
   </div>
 
+  <%- include("partials/footer") %>
+
   <script>
     const originalEmail = "<%= user.email %>";
     const editForm = document.getElementById("edit-form");
