--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -27,7 +27,10 @@
     }
   </style>
    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-
+   <link rel="stylesheet" href="/css/cart.css" />
+   <script src="https://cdn.tailwindcss.com"></script>
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
